sut/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sut
  labels:
    app.kubernetes.io/name: mini-ecommerce
    app.kubernetes.io/component: namespace
